Improve cart styles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <iframe class="navbar-iframe" src="./navbar.html" frameborder="0"></iframe>
-    <h1>Products</h1>
+    <h1>Welcome to MyStore</h1>
     <ul id="product-list"></ul>
     <script src="./js/index.js"></script>
   </body>
