--- a/navbar.html
+++ b/navbar.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <nav class="navbar">
-      <a class="navbar-home" href="./index.html" target="_top">MyStore</a>
-      <a href="cart.html" target="_top">Cart</a>
+      <div class="nav-container">
+        <a class="navbar-home" href="./index.html" target="_top">MyStore</a>
+        <a href="cart.html" target="_top">Cart</a>
+      </div>
     </nav>
   </body>
 </html>
