--- a/product.html
+++ b/product.html
@@ -17,6 +17,7 @@
     </div>
 
     <div class="product-actions">
+      <input type="number" id="product-quantity" value="1" min="1" />
       <button class="add-to-cart-btn" id="add-to-cart-btn">Add to Cart</button>
       <a href="cart.html" class="view-cart-btn">View Cart</a>
     </div>
