--- a/cart.html
+++ b/cart.html
@@ -14,6 +14,9 @@
     <div id="total-container">
       <p>Total: <span id="total-price">$0.00</span></p>
     </div>
+    <div class="checkout-container">
+      <button class="checkout-btn">Checkout</button>
+    </div>
     <script src="js/cart.js"></script>
   </body>
 </html>
