--- a/cart.html
+++ b/cart.html
@@ -15,7 +15,7 @@
       <p>Total: <span id="total-price">$0.00</span></p>
     </div>
     <div class="checkout-container">
-      <button class="checkout-btn">Checkout</button>
+      <button class="checkout-btn" id="checkout-btn">Checkout</button>
     </div>
     <script src="js/cart.js"></script>
   </body>
